<resources>
    <string name="app_name">QuejaTec</string>
    <string name="username">Nombre de usuario:</string>
    <string name="password">Contraseña:</string>
    <string name="login">Ingresar</string>
    <string name="registro">Regístrate</string>
    <string name="pregunta">¿No tienes una cuenta?</string>
    <string name="email">Correo Electrónico:</string>
    <string name="lastName">Apellidos:</string>
    <string name="names">Nombres:</string>
    <string name="direction">Dirección:</string>
    <string name="Título">Formulario de Registro</string>
    <string name="configuracion">Configuraciones</string>
    <string name="nuevasol">Crear Solicitud</string>
    <string name="notifications">Mis solicitudes</string>
    <string name="perfil">Perfil</string>
    <string name="logout">Cerrar Sesión</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_user">Crear Usuario</string>
    <string name="notifications1">Notificaciones</string>
    <string name="Usuarios">Usuarios</string>
    <string name="info">Información</string>
    <string name="tiposol">Tipo de solicitud:</string>
    <string name="description">Descripción:</string>
    <string name="sucursal">Sucursal:</string>
    <string name="responder">RESPONDER</string>
    <string name="ver">VER</string>
</resources>
