<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="quejatec.proyecto.compumovil.udea.edu.co.quejatec.LoginActivity">

    <ScrollView
        android:id="@+id/scroll_login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/window_background">
        <LinearLayout
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/imgLogo"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/logo_proyecto"
                    android:layout_centerInParent="true" />
                <ImageView
                    android:id="@+id/imgNombrePro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/nombre_logo"
                    android:layout_below="@+id/imgLogo"
                    android:layout_centerInParent="false"
                    android:layout_marginTop="30dp" />

            </RelativeLayout>
            <LinearLayout
                android:id="@+id/linearLayoutUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true"
                android:orientation="horizontal">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/Hint"
                    android:textColorHint="@color/light">

                    <EditText
                        android:id="@+id/etUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/username"
                        android:inputType="textNoSuggestions"
                        android:nextFocusDown="@+id/etPassword"
                        android:maxLines="1"
                        android:backgroundTint="@color/light2"
                        android:drawableLeft="@drawable/username"
                        android:drawablePadding="20dp"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/linearLayoutPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true"
                android:orientation="horizontal">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/Hint"
                    android:textColorHint="@color/light">

                    <EditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:maxLines="1"
                        android:drawableLeft="@drawable/password"
                        android:backgroundTint="@color/light2"
                        android:drawablePadding="20dp"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <Button
                    android:layout_marginLeft="30dp"
                    android:id="@+id/btnIngresar"
                    android:layout_marginTop="40dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginBottom="20dp"
                    android:layout_width="match_parent"
                    android:backgroundTint="@color/accent2"
                    android:text="@string/login"
                    android:textColor="@color/letter"
                    android:layout_height="wrap_content" />
                </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_height="50dp">
                <TextView
                    android:layout_width="0dp"
                    android:id="@+id/tvPregunta"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textColor="@color/letter"
                    android:layout_marginLeft="30dp"
                    android:text="@string/pregunta"
                    android:textSize="14sp"
                    android:textAlignment="center" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/registro"
                    android:textColor="@color/backImg"
                    android:textSize="14sp"
                    android:textStyle="normal|bold"
                    android:id="@+id/txtvRegister" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
