<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light3"
    tools:context="quejatec.proyecto.compumovil.udea.edu.co.quejatec.RegisterActivity">


    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/linearLayoutUserR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="60dp"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true"
                android:orientation="horizontal">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/Hint2"
                    android:textColorHint="@color/hint2">

                    <EditText
                        android:id="@+id/etUsernameR"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/username"
                        android:inputType="textNoSuggestions"
                        android:nextFocusDown="@+id/etPasswordR"
                        android:maxLines="1"
                        android:backgroundTint="@color/hint2"
                        android:drawableLeft="@drawable/accountgreen"
                        android:drawablePadding="20dp"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutPasswordR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true"
                android:orientation="horizontal">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/Hint2"
                    android:textColorHint="@color/hint2">

                    <EditText
                        android:id="@+id/etPasswordR"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:nextFocusDown="@+id/etEmailR"
                        android:maxLines="1"
                        android:backgroundTint="@color/hint2"
                        android:drawableLeft="@drawable/lockgreen"
                        android:drawablePadding="20dp"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutEmailR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true"
                android:orientation="horizontal">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/Hint2"
                    android:textColorHint="@color/hint2">

                    <EditText
                        android:id="@+id/etEmailR"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:nextFocusDown="@+id/etLastNameR"
                        android:maxLines="1"
                        android:backgroundTint="@color/hint2"
                        android:drawableLeft="@drawable/email"
                        android:drawablePadding="20dp"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutLastNamesR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true"
                android:orientation="horizontal">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/Hint2"
                    android:textColorHint="@color/hint2">

                    <EditText
                        android:id="@+id/etLastNameR"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/lastName"
                        android:inputType="textNoSuggestions|textCapWords"
                        android:nextFocusDown="@+id/etNamesR"
                        android:maxLines="1"
                        android:backgroundTint="@color/hint2"
                        android:drawableLeft="@drawable/names"
                        android:drawablePadding="20dp"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutNamesR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true"
                android:orientation="horizontal">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/Hint2"
                    android:textColorHint="@color/hint2">

                    <EditText
                        android:id="@+id/etNamesR"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/names"
                        android:inputType="textNoSuggestions|textCapWords"
                        android:nextFocusDown="@+id/etDirectionR"
                        android:maxLines="1"
                        android:backgroundTint="@color/hint2"
                        android:drawableLeft="@drawable/names"
                        android:drawablePadding="20dp"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutDirectionR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true"
                android:orientation="horizontal">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/Hint2"
                    android:textColorHint="@color/hint2">

                    <EditText
                        android:id="@+id/etDirectionR"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/direction"
                        android:inputType="textNoSuggestions"
                        android:maxLines="1"
                        android:backgroundTint="@color/hint2"
                        android:drawableLeft="@drawable/direction"
                        android:drawablePadding="20dp"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/linearLayoutButtonR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true"
                android:orientation="horizontal">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Registrarse"
                    android:textColor="@color/hint2"
                    android:backgroundTint="@color/accent"
                    />
            </LinearLayout>
        </LinearLayout>

        </android.support.v4.widget.NestedScrollView>
        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp">
            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_scrollFlags="scroll|enterAlways"

                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <TextView android:id="@+id/txtAbTitulo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Título"
                        android:textColor="@color/letter"
                        android:textSize="12sp" />
                </LinearLayout>

            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>
    </android.support.design.widget.CoordinatorLayout>

</LinearLayout>
